despliegues/enrutado A-B/auth-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-virtual-service
spec:
  hosts:
    - auth-service
  http:
    - route:
      - destination:
          host: auth-service
          port:
            number: 5002
          subset: v1
        weight: 75
      - destination:
          host: auth-service
          port:
            number: 5002
          subset: v2
        weight: 25
