despliegues/enrutado A-B/message-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: message-virtual-service
spec:
  hosts:
    - message-service
  http:
    - route:
      - destination:
          host: message-service
          port:
            number: 5000
          subset: v1
        weight: 75
      - destination:
          host: message-service
          port:
            number: 5000
          subset: v2
        weight: 25
